<resources>
    <string name="app_name">TestApp</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_report_kk">Отчёт КК</string>
    <string name="action_consumer">Контрагент</string>
    <string name="last_report">Последний отчёт</string>
    <string name="nodata">Н/Д</string>
    <string name="create">Создать</string>
    <string name="TU">ТУ</string>
    <string name="Plant">Площадка</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="tus_array">
        <item>Дзержинский ТУ</item>
        <item>Кстовский ТУ</item>
        <item>Нижегородский ТУ</item>
    </string-array>

    <string-array name="plants_array">
        <item>Plant 1</item>
        <item>Plant 2</item>
        <item>Plant 3</item>
        <item>Plant 4</item>
        <item>Plant 5</item>
        <item>Plant 6</item>
        <item>Plant 7</item>
        <item>Plant 8</item>
        <item>Plant 9</item>
        <item>Plant 10</item>

    </string-array>

</resources>
